target project done

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
       }
 
       .header {
-        width: 70%;
-        padding: 10px 1px;
+        width: 70% !important;
+        padding: 10px 0px !important;
       }
 
       .number {
-        margin-right: 20px;
+        margin-right: 20px !important;
         font-size: 20px !important;
       }
 
@@ -48,8 +48,8 @@
       .thanks .pickup-details {
         width: 400px !important;
         margin: 10px auto !important;
-        text-align: center;
-        padding: 20px 0px 20px 0px;
+        text-align: center !important;
+        padding: 20px 0px 20px 0px !important;
         line-height: 30px !important;
         font-size: 20px !important;
 
@@ -121,7 +121,7 @@
       }
 
       .changes .details {
-        width: 500px;
+        width: 500px !important;
       }
 
       .changes td {
