--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     <table class="logo" width="100%" align="center" borders="0" cellspacing="0" cellpadding="0">
                       <a href="https://www.target.com/" class="target-logo"
                         style="text-decoration: none; outline: none;">
-                        <img src="/img/logo.png" alt="target logo" width="50px"
+                        <img src="https://i.postimg.cc/Dygvb882/logo.png" alt="target logo" width="50px"
                           style="max-width:100% !important; height:auto;">
                       </a>
                     </table>
@@ -233,7 +233,7 @@
                             style="font-weight: normal; font-size: 21px;line-height: 23px;text-align: center; margin-bottom: 15px;">
                             Placed
                             March 16, 2023</p>
-                          <img src="/img/order-dog.png" alt="target-dog" width="90%"
+                          <img src="https://i.postimg.cc/wjj65gmD/order-dog.png" alt="target-dog" width="90%"
                             style="max-width:100% !important; height:auto;">
                           <p class="pickup-details"
                             style="font-size: 16px; line-height: 23px; font-weight: normal; color:#333333; margin:20px 0px">
@@ -303,8 +303,8 @@
                       processing for in-store
                       pickup
                     </h2>
-                    <img src="/img/small-triangle.png" alt="small-triangle" width="27" height="11"
-                      style="display: block; margin: 0 auto; max-width:100% !important ;height:auto;">
+                    <img src="https://i.postimg.cc/TPZfXbHc/small-triangle.png" alt="small-triangle" width="27"
+                      height="11" style="display: block; margin: 0 auto; max-width:100% !important ;height:auto;">
                   </td>
                 </tr>
                 <!-- end of title section -->
@@ -335,7 +335,7 @@
                           <a href="https://click.oe1.target.com/?qs=e304e3c562584a2bfc1a1211b484d350da6d90d3f01d8fabbe7d0da524afce4cc4ee84e78c52d19be2f64900c9f7d421b12fc207773edf623cdad3247bb35868"
                             style="text-align: center;">
                             <img style="width: 185px; margin: 0 50px; max-width:100% !important; height:auto;"
-                              src="/img/changing-pad.jpeg" alt="changing-pad">
+                              src="https://i.postimg.cc/VL1s6jsG/changing-pad.jpg" alt="changing-pad">
                           </a>
                         </td>
                       </tr>
@@ -448,7 +448,7 @@
                         <td style="padding: 10px 0px;" width="100%">
 
                           <div style="display: inline-block; float:left;">
-                            <img src="/img/visa.png" alt="visa-logo"
+                            <img src="https://i.postimg.cc/50L19thW/visa.png" alt="visa-logo"
                               style="width: 45px; height: 30px; vertical-align: bottom; max-width:100% !important; height:auto;">
                             <span
                               style="text-transform: capitalize; font-weight: normal; font-size: 14px; vertical-align: text-top; padding:0px 10px; margin: 0;">
@@ -481,7 +481,7 @@
                       cellspacing="0" cellpadding="0">
                       <tr>
                         <td style="text-align: center; padding-bottom: 45px;">
-                          <img src="/img/box-target.png" alt="target-box"
+                          <img src="https://i.postimg.cc/0j1k7SYN/box-target.png" alt="target-box"
                             style="width: 82px; display: block; margin: 0px auto 10px auto; max-width:100% !important; height:auto;">
                           <span
                             style="display:block; text-transform: capitalize; color: #222222; font-weight: bold; font-size:18px;">need
@@ -541,7 +541,7 @@
                             cellpadding="0">
                             <tr>
                               <td style="background-color: #ffffff; padding: 5px 0px 10px 0px;">
-                                <img src="/img/shipping.png" alt="shipping"
+                                <img src="https://i.postimg.cc/nLsp52Tz/shipping.png" alt="shipping"
                                   style="width: 120px; text-align: center; display: block; margin: 0 auto; max-width:100%;height:auto;">
                                 <p
                                   style="font-size: 13px; color: #333333; text-align: center; font-weight: bold; margin: 0;">
@@ -549,7 +549,7 @@
                                   2-day ship </p>
                               </td>
                               <td style="background-color: #fafafa;; padding: 5px 0px 10px 0px;">
-                                <img src="img/celerance.png" alt="clearance-img"
+                                <img src="https://i.postimg.cc/zG2q06C6/celerance.png" alt="clearance-img"
                                   style="width: 120px; text-align: center; display: block; margin: 0 auto; max-width:100%;height:auto;">
                                 <p
                                   style="font-size: 13px; color: #333333; text-align: center; font-weight: bold; margin: 0;">
@@ -565,7 +565,7 @@
                                 </p>
                               </td>
                               <td style="background-color: #f0f0f0; padding: 5px 0px 10px 0px;">
-                                <img src="/img/delivery.png" alt="delivery"
+                                <img src="https://i.postimg.cc/90PWbfbY/delivery.png" alt="delivery"
                                   style="width: 120px; text-align: center; display: block; margin: 0 auto; max-width:100%;height:auto;">
                                 <p
                                   style="font-size: 13px; color: #333333; text-align: center; font-weight: bold; margin: 0;">
@@ -651,7 +651,8 @@
                                       <td>Get the latest on our store <u>health
                                           &amp; safety&nbsp;plans</u> </td>
                                       <td>
-                                        <img src="/img/information.jpg" alt="information-icon" width="30px"
+                                        <img src="https://i.postimg.cc/ZY6K4fmv/information.jpg" alt="information-icon"
+                                          width="30px"
                                           style="vertical-align: middle; margin-left: 10px; max-width:100%;height:auto;">
                                       </td>
                                     </tr>
