--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                                 </p>
                               </td>
                               <td style="background-color: #f5f5f5; padding: 5px 0px 10px 0px;">
-                                <img src="/img/target-app.png" alt="target-app"
+                                <img src="https://i.postimg.cc/mk44Ps4z/target-app.png" alt="target-app"
                                   style="width: 120px; text-align: center; display: block; margin: 0 auto; max-width:100%;height:auto;">
                                 <p
                                   style="font-size: 13px; color: #333333; text-align: center; font-weight: bold; margin: 0;">
