fixed overflow problem

--- a/index.html
+++ b/index.html
@@ -10,7 +10,206 @@
 
 
   <style>
+    @media only screen and (max-width:960px) {
+
+      html {
+        max-width: 100% !important;
+        overflow-x: hidden;
+      }
+
+    }
+
     @media only screen and (max-width:600px) {
+
+      html {
+        max-width: 100% !important;
+        overflow-x: hidden;
+      }
+
+      .container {
+        width: 100% !important;
+
+      }
+
+      .header {
+        width: 70% !important;
+        padding: 10px 0px !important;
+      }
+
+      .number {
+        margin-right: 20px !important;
+        font-size: 18px !important;
+      }
+
+      .total {
+        padding: 0 50px !important;
+      }
+
+      .thanks {
+        padding: 0 50px !important;
+      }
+
+      .thanks h1 {
+        width: 70%;
+        text-align: center;
+        line-height: 50px !important;
+        font-size: 35px !important;
+        margin: 10px auto !important;
+      }
+
+      .thanks img {
+        max-width: 80% !important;
+        height: auto;
+        margin-bottom: 10px;
+      }
+
+
+      .thanks p {
+        font-size: 16px !important;
+        margin-bottom: 0px !important;
+      }
+
+
+
+      .thanks .pickup-details {
+        width: 400px !important;
+        margin: 10px auto !important;
+        text-align: center !important;
+        padding: 20px 0px 20px 0px !important;
+        line-height: 30px !important;
+        font-size: 16px !important;
+
+      }
+
+      .border-line {
+        width: 50% !important;
+      }
+
+      .border-1-td {
+        display: none !important;
+      }
+
+
+      .total span {
+        font-size: 18px !important;
+      }
+
+      .total p {
+        font-size: 40px !important;
+      }
+
+
+
+      .pickup h2 {
+        width: 85% !important;
+        margin: 0 auto !important;
+        font-size: 18px !important;
+      }
+
+      .pickup .left {
+        width: 100% !important;
+      }
+
+      .pickup .left img {
+        width: 300px !important;
+        margin: 0 100px !important;
+      }
+
+
+      .pickup .right {
+        max-width: 100% !important;
+        width: 70% !important;
+        text-align: left;
+        margin: 0 55px 30px 0px !important;
+
+      }
+
+
+
+      .changes .details img {
+        margin: 20px auto 10px auto !important;
+      }
+
+      .address span {
+        font-size: 18px !important;
+      }
+
+
+      .address p {
+        width: 262px;
+        margin: 10px auto !important;
+        font-size: 18px !important;
+        line-height: 30px !important;
+      }
+
+      .summary {
+        padding: 0 85px !important;
+      }
+
+
+      .summary .details span {
+
+        font-size: 18px !important;
+      }
+
+      .summary .details p {
+        font-size: 16px !important;
+      }
+
+
+      .changes .details {
+        width: 500px !important;
+      }
+
+      .changes td {
+        padding-bottom: 30px !important;
+      }
+
+      .changes .details p {
+        line-height: 23px !important;
+      }
+
+      .box-columns td {
+        display: block !important;
+
+
+      }
+
+      .target-box {
+        width: 430px !important;
+        margin: 0 auto !important;
+      }
+
+
+      .footer-links ul {
+        display: block !important;
+        padding: 0 !important;
+      }
+
+
+      .footer-links li {
+        font-size: 18px !important;
+        margin: 0px 0px !important;
+        display: block !important;
+        border-bottom: 1px solid #e3e9ed;
+        padding: 15px 0px;
+        vertical-align: middle;
+      }
+
+
+      .footer-links #first-li {
+        border-top: 1px solid #e3e9ed !important;
+      }
+    }
+
+
+
+    @media only screen and (max-width:424px) {
+
+      html {
+        max-width: 100% !important;
+        overflow-x: hidden;
+      }
 
       .container {
         width: 100% !important;
@@ -161,6 +360,7 @@
       .footer-links #first-li {
         border-top: 1px solid #e3e9ed !important;
       }
+
 
     }
   </style>
